...

                        Spacer()
                    }
                    .frame(height: HEADER_HEIGHT)
                    //debug//.border(Color.blue)
                    .contentShape(Rectangle())
                    .accessibilityIdentifier("calcPanel_indicator") // fastlane snapshot 用: ページ送り/列切替
                    .gesture(
                        DragGesture()
                            .onEnded { value in
                                if IND_SWIPE_RANGE < value.translation.width {
                                    // 右へスワイプ：前ページへ
                                    pagePrev()
...
                    // 表示CalcView増加
                    showPlus()
                }) {
                    Image(systemName: "plus.square.on.square")
                        //.imageScale(.large)
                }
                .accessibilityIdentifier("calcPanel_increase") // fastlane snapshot 用
                .opacity(showCount == pageCount ? 0.3 : 1.0)
                .padding() // これがないとタップ有効範囲がImageの最小範囲だけになってしまう
                .contentShape(Rectangle()) // paddingを含む領域全体をタップ対象にする
                //debug// .border(Color.red)

                if isBeginner {
...
